roles/docker-dtr-primary/files/iptables-dtr
# sample configuration for iptables service
# you can edit this manually or use system-config-firewall
# please do not ask us to add additional ports/services to this default configuration
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2376 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2377 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4789 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 4789 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7946 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 7946 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12376 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12379 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12380 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12381 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12382 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12383 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12384 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12385 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12386 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12387 -j ACCEPT
-A INPUT -p esp -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
